Removed margin on mobile for hidden state. Also removed the down arrow when states become inputs. It is fixed for page load and on change. We should be beta ready I think.

--- a/assets/front/css/checkout-woocommerce-front.css
+++ b/assets/front/css/checkout-woocommerce-front.css
@@ -935,6 +935,13 @@ fieldset .cfw-sg-container:last-child > * > .form-row {
 .shipping-message {
   padding-top: 10px; }
 
+@media (max-width: 600px) {
+  .state-gone-margin {
+    margin-bottom: 0 !important; } }
+
+.remove-state-down-arrow > .cfw-input-wrap:after {
+  content: none; }
+
 .cfw-shipping-methods-list {
   border: 1px solid #ddd;
   border-radius: 4px;
